--- a/src/Runtime/Runtime.csproj
+++ b/src/Runtime/Runtime.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="BonsaiFunction.cs" />
+    <Compile Include="Primitives\BonsaiNumberFunction.cs" />
+    <Compile Include="Primitives\BonsaiPrimitiveFunction.cs" />
+    <Compile Include="Primitives\BonsaiStringFunction.cs" />
+    <Compile Include="Primitives\MapsToSymbolAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Parser\Parser.csproj">
