--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Compile Include="BonsaiTestClass.cs" />
     <Compile Include="BuiltinTests.cs" />
-    <Compile Include="DefunTests.cs" />
+    <Compile Include="FunctionTests.cs" />
     <Compile Include="MathTests.cs" />
     <Compile Include="OverridePrimitivesTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
