--- a/src/Runtime/Runtime.csproj
+++ b/src/Runtime/Runtime.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Primitives\BonsaiNumberFunction.cs" />
     <Compile Include="Primitives\BonsaiPrimitiveFunction.cs" />
     <Compile Include="Primitives\BonsaiStringFunction.cs" />
+    <Compile Include="Primitives\BonsaiSymbolFunction.cs" />
     <Compile Include="Primitives\MapsToSymbolAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
