--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="FunctionTests.cs" />
     <Compile Include="MathTests.cs" />
     <Compile Include="OverridePrimitivesTest.cs" />
+    <Compile Include="PatternMatchingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BlockTests.cs" />
     <Compile Include="StringTests.cs" />
