--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BonsaiTestClass.cs" />
     <Compile Include="BuiltinTests.cs" />
     <Compile Include="ClrIntegrationTests.cs" />
+    <Compile Include="ConditionalTests.cs" />
     <Compile Include="FunctionTests.cs" />
     <Compile Include="MathTests.cs" />
     <Compile Include="OverridePrimitivesTest.cs" />
