--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="PatternMatchingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BlockTests.cs" />
+    <Compile Include="PrototypeTests.cs" />
     <Compile Include="StringTests.cs" />
   </ItemGroup>
   <ItemGroup>
