basic prototyping works; force projects to x86 when in Debug so that Edit & Continue works;

--- a/src/Parser/Parser.csproj
+++ b/src/Parser/Parser.csproj
@@ -32,6 +32,7 @@
       </CustomCommands>
     </CustomCommands>
     <NoWarn>618, 612, 219</NoWarn>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
