--- a/src/Runtime/Runtime.csproj
+++ b/src/Runtime/Runtime.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>pdbonly</DebugType>
@@ -65,6 +65,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="Generator.cs" />
     <Compile Include="BonsaiFunction.cs" />
+    <Compile Include="MapsToSymbolAttribute.cs" />
     <Compile Include="Patterns.cs" />
     <Compile Include="NoMatchException.cs" />
     <Compile Include="PatternMatchingBonsaiFunction.cs" />
@@ -74,7 +75,6 @@
     <Compile Include="Primitives\BonsaiPrimitiveFunction.cs" />
     <Compile Include="Primitives\BonsaiStringFunction.cs" />
     <Compile Include="Primitives\BonsaiSymbolFunction.cs" />
-    <Compile Include="Primitives\MapsToSymbolAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Parser\Parser.csproj">
