--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="BuiltinTests.cs" />
     <Compile Include="ClrIntegrationTests.cs" />
     <Compile Include="ConditionalTests.cs" />
+    <Compile Include="DataDeclTests.cs" />
     <Compile Include="FunctionTests.cs" />
     <Compile Include="MathTests.cs" />
     <Compile Include="OverridePrimitivesTest.cs" />
