--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -67,6 +67,9 @@
     <Compile Include="BlockTests.cs" />
     <Compile Include="PrototypeTests.cs" />
     <Compile Include="StringTests.cs" />
+    <Compile Include="IEnumerableTests.cs" />
+    <Compile Include="IListTests.cs" />
+    <Compile Include="IDictionaryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AuthoringTests.txt" />
