--- a/src/Runtime/Runtime.csproj
+++ b/src/Runtime/Runtime.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Primitives\BonsaiPrimitives.Strings.cs" />
     <Compile Include="Primitives\BonsaiPrimitives.Symbols.cs" />
     <Compile Include="Primitives\PrimitiveAttribute.cs" />
+    <Compile Include="Primitives\CatchAllPrimitiveAttribute.cs" />
+    <Compile Include="Primitives\BonsaiPrimitives. IDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Parser\Parser.csproj">
