--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockTests.cs" />
     <Compile Include="BonsaiTestClass.cs" />
     <Compile Include="BuiltinTests.cs" />
     <Compile Include="ClrIntegrationTests.cs" />
@@ -64,7 +65,6 @@
     <Compile Include="OverridePrimitivesTest.cs" />
     <Compile Include="PatternMatchingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test References\BlockTests.cs" />
     <Compile Include="PrototypeTests.cs" />
     <Compile Include="StringTests.cs" />
     <Compile Include="IEnumerableTests.cs" />
@@ -83,9 +83,6 @@
       <Project>{6CBE58B2-447E-4EA8-B0A7-3E1F0BA08912}</Project>
       <Name>Runtime</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Shadow Include="Test References\Bonsai.Runtime.accessor" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
