--- a/src/Parser/Parser.csproj
+++ b/src/Parser/Parser.csproj
@@ -32,7 +32,7 @@
       </CustomCommands>
     </CustomCommands>
     <NoWarn>618, 612, 219</NoWarn>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
